# BotPilot

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  README.md  Readme.md  docker-compose.yml  install_cuda_11.5.sh  run_black.sh  run_eslint.sh  run_flake8.sh  run_prettier.sh
bot-pilot-chat/backend/: .gitignore  .pre-commit-config.yaml  Makefile  domain.yml  pyproject.toml  requirements.txt  setup.cfg
bot-pilot-chat/backend/bot-connectors/: .dockerignore  .flake8  .gitignore  Containerfile  Makefile  README.md  logging.yaml  pyproject.toml  requirements.txt
bot-pilot-chat/backend/bot-connectors/libs/runtime/: requirements.txt
bot-pilot-chat/backend/bot-connectors/libs/tools/: requirements.txt
bot-pilot-chat/backend/bot-connectors/src/bot_connectors/: config.py  main.py
bot-pilot-chat/backend/bot-connectors/src/bot_connectors/domain/: event_attendee.py  google_calendar_credentials.py  google_calendar_event.py
bot-pilot-chat/backend/bot-connectors/src/bot_connectors/persistence/: db_session_factory.py  google_calendar_credentials_das.py  google_calendar_das.py
bot-pilot-chat/backend/bot-connectors/src/bot_connectors/service/: calendar_event_reader.py  google_calendar_client.py  google_calendar_events_provider.py  google_calendar_provider.py
bot-pilot-chat/backend/bot-connectors/tests/bot_connectors/domain/: test_google_calendar_event.py
bot-pilot-chat/backend/bot-connectors/tests/bot_connectors/persistence/: test_google_calendar_das.py
bot-pilot-chat/backend/chat-backend/: Makefile  pyproject.toml  requirements.txt
bot-pilot-chat/backend/chat-backend/conf/: local.env
bot-pilot-chat/backend/chat-backend/integration_tests/: integration_test_config.py  test_faqs_integration.py
bot-pilot-chat/backend/chat-backend/src/: tf_gpu_test.py
bot-pilot-chat/backend/chat-backend/src/bot_pilot_chat/: main.py
bot-pilot-chat/backend/chat-backend/src/bot_pilot_chat/config/: config.py
bot-pilot-chat/backend/chat-backend/src/bot_pilot_chat/domain/: nlu_interpreter.py  query.py  response.py
bot-pilot-chat/backend/chat-backend/src/bot_pilot_chat/routing/: faq_route.py
bot-pilot-chat/backend/chat-backend/tests/service/matching/: test_text_matching.py
bot-pilot-chat/backend/data/: rules.yml
bot-pilot-chat/backend/integration_tests/: integration_test_config.py
bot-pilot-chat/backend/integration_tests/data/: faqs.json
bot-pilot-chat/backend/rasa-actions/: .flake8  Makefile  config.yml  domain.yml  endpoints.yml  helper.sh  pyproject.toml  requirements.txt  setup.cfg  story_graph.dot
bot-pilot-chat/backend/rasa-actions/conf/: local.env
bot-pilot-chat/backend/rasa-actions/container/: Containerfile_actions  Containerfile_core
bot-pilot-chat/backend/rasa-actions/data/: nlu.yml  nlu_consultant_form.yml  nlu_consultant_inform.yml  nlu_info_form.yml  nlu_termin.yml  nlu_user_info_form.yml  regex_features.yml  rules.yml  stories-interactive.yml  stories.yml  termin_nlu.yml
bot-pilot-chat/backend/rasa-actions/integration_tests/data/: faqs.json
bot-pilot-chat/backend/rasa-actions/src/: tf_gpu_test.py
bot-pilot-chat/backend/rasa-actions/src/actions/: action_anreise.py  action_ask_continue.py  action_ask_termin_medium.py  action_begruessung.py  action_bereiche.py  action_deny.py  action_general_bot.py  action_get_faq.py  action_kosten.py  action_negative_feedback.py  action_parking.py  action_positive_feedback.py  action_standort.py  action_steuerberatung.py  action_steuererklaerung.py  action_termin.py  action_termin_vereinbaren.py  action_unterlagen.py  action_verabschiedung.py  action_zeiten.py  nlu_fallback.py
bot-pilot-chat/backend/rasa-actions/src/actions/validation/: validate_termin_form.py
bot-pilot-chat/backend/rasa-actions/src/bot_pilot/actions/: action_anreise.py  action_ask_confirm_name.py  action_ask_consultant.py  action_ask_consultant_name.py  action_ask_continue.py  action_ask_feedback.py  action_ask_meeting_datetime.py  action_ask_termin_medium.py  action_ask_termin_type.py  action_ask_user_mail.py  action_ask_user_name.py  action_ask_user_name_confirmed.py  action_ask_user_type.py  action_begruessung.py  action_bereiche.py  action_general_bot.py  action_get_faq.py  action_handle_user_name_confirm.py  action_kosten.py  action_negative_feedback.py  action_parking.py  action_positive_feedback.py  action_standort.py  action_steuerberatung.py  action_steuererklaerung.py  action_stop.py  action_submit_make_meeting_form.py  action_submit_termin.py  action_switch_consultant_form.py  action_switch_form.py  action_switch_user_info_form.py  action_switch_user_type_form.py  action_termin_vereinbaren.py  action_unterlagen.py  action_verabschiedung.py  action_zeiten.py
bot-pilot-chat/backend/rasa-actions/src/bot_pilot/config/: config.py
bot-pilot-chat/backend/rasa-actions/src/bot_pilot/domain/: button_option.py  button_registry.py  response.py  tax_consultant.py
bot-pilot-chat/backend/rasa-actions/src/bot_pilot/utils/: entity_utils.py
bot-pilot-chat/backend/rasa-actions/src/data/: faqs.json
bot-pilot-chat/backend/rasa-actions/src/domain/: response.py
bot-pilot-chat/backend/rasa-actions/src/utils/: response_wrapper.py
bot-pilot-chat/backend/rasa-actions/src/validation/: validate_termin_form.py  validate_user_name.py
bot-pilot-chat/backend/rasa-actions/tests/: config.py
bot-pilot-chat/backend/rasa-actions/tests/data/: faqs.json
bot-pilot-chat/backend/rasa-actions/train_test_split/: test_data.yml  training_data.yml
bot-pilot-chat/backend/src/bot-pilot-chat/data/: faqs.json
bot-pilot-chat/backend/src/bot_pilot_chat/: main.py
bot-pilot-chat/backend/src/bot_pilot_chat/config/: config.py
bot-pilot-chat/backend/src/bot_pilot_chat/data/: faqs.json
bot-pilot-chat/backend/src/bot_pilot_chat/domain/: query.py  response.py
bot-pilot-chat/backend/src/bot_pilot_chat/matching/: text_matching.py
bot-pilot-chat/backend/src/bot_pilot_chat/routing/: faq_route.py
bot-pilot-chat/backend/tests/: config.py  conftest.py
bot-pilot-chat/backend/tests/data/: faqs.json
bot-pilot-chat/backend/tests/service/matching/: test_text_matching.py
(+258 files in other folders)
