[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.tox]
envlist = ["unit_tests", "integration_test", "lint", "format"]

[tool.tox.env.base_deps]
description = "install all required libraries in base step"
skip_install = true
allowlist_externals = ["sh"]
deps = ["-rrequirements.txt"]
commands = [
    ["sh", "-c", "echo", "✔ requirements.txt geladen"]
]

[tool.tox.env.unit_tests]
description = "Run tests with Python 3.12"
#depends = ["base_deps"]
deps = [
    "-rrequirements.txt",
    "pytest",
    "pytest-cov"
]
commands = [
    ["python", "-m", "pytest", "tests/"]
]

[tool.tox.env.integration_test]
description = "Run integration tests with Python 3.12"
#depends = ["base_deps"]
deps = [
    "-rrequirements.txt",
    "pytest",
    "pytest-cov"
]
commands = [
    ["python", "-m", "pytest", "integration_tests/"]
]


[tool.tox.env.lint]
description = "Run flake8 linter"
deps = ["flake8"]
commands = [
    ["flake8", "src/"]
]

[tool.tox.env.format]
description = "Run black formatter"
deps = ["black"]
commands = [
    ["black", "src/"],
]

[tool.tox.env.coverage]
description = "Run tests and generate HTML coverage report"
#depends = ["base_deps"]
deps = [
    "-rrequirements.txt",
    "pytest",
    "pytest-cov"
]
commands = [
    ["python", "-m", "pytest", "tests/"]
]

[project]
name = "bot-pilot-chat"
version = "1.0"