[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 80
target-version = ["py310"]

[tool.flake8]
max-line-length = 80

[tool.tox]
envlist = ['unit_tests', 'integration_test', 'lint', 'format', 'coverage']


[tool.tox.testenv]
usedevelop = true
download = true

[tool.tox.env.base_deps]
description = "install all required libraries in base step"
skip_install = true
allowlist_externals = ["sh"]
deps = ["-rrequirements.txt"]
commands = [
    ["sh", "-c", "echo", "✔ requirements.txt geladen"]
]

[tool.tox.env.unit_tests]
set_env = { file = 'conf{/}local.env' }
description = "Run tests with Python 3.10"
deps = [
    "-rrequirements.txt",
    "pytest",
    "pytest-cov"
]
commands = [
    ["python", "-m", "pytest", "tests/"],
]

[tool.tox.env.integration_test]
set_env = { file = 'conf{/}local.env' }
description = "Run integration tests with Python 3.10"
#depends = ["base_deps"]
deps = [
    "-rrequirements.txt",
    "pytest",
    "pytest-cov"
]
commands = [
    ["python", "-m", "pytest", "integration_tests/"]
]


[tool.tox.env.lint]
description = "Run flake8 linter"
deps = ["flake8"]
commands = [
    ["flake8", "src/"]
]

[tool.tox.env.format]
description = "Run black formatter"
deps = ["black"]
commands = [
    ["black", "src/"],
    ["black", "tests/"],
    ["black", "integration_tests/"]
]

[tool.tox.env.coverage]
set_env = { file = 'conf{/}local.env' }
description = "Run tests and generate HTML coverage report"
#depends = ["base_deps"]
deps = [
    "-rrequirements.txt",
    "pytest",
    "pytest-cov"
]
commands = [
    ["python", "-m", "pytest", "tests/"]
]

[project]
name = "bot-pilot-chat"
version = "1.0"
