[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.tox]
envlist = ['format', 'lint', 'unit_tests', 'coverage', 'rasa_tests', 'rasa_story_tests']
requires = ["tox>=4.30"]

[tool.tox.env.unit_tests]
description = "Run unit tests"
deps = [
    "pytest==7.4.4",
    "emoji==2.14.1",
    "sentence-transformers==2.3.0",
    "rasa_sdk==3.6.2",
    "rasa==3.6.21",
    "markdown_strings==3.4.0",
    "-e ."
]
commands = [
    ["python", "-m", "pytest", "tests/unit"],
]

[tool.tox.env.integration_test]
description = "Run integration tests"
deps = [
    "-rrequirements.txt",
    "-e ."
]
commands = [
    ["python", "-m", "pytest", "integration_tests/"]
]

[tool.tox.env.lint]
description = "Run flake8 linter"
deps = ["flake8"]
commands = [
    ["flake8", "src/"],
    ["flake8", "tests/unit"],
    ["flake8", "integration_tests/"],
]

[tool.tox.env.rasa_tests]
description = "Run Rasa tests"
deps = [
    "rasa==3.6.21",
    "spacy==3.7.4",
    "https://github.com/explosion/spacy-models/releases/download/de_core_news_md-3.7.0/de_core_news_md-3.7.0.tar.gz"
]
commands = [
    ["rasa", "test", "nlu", "--fail-on-prediction-errors"]
]

[tool.tox.env.rasa_story_tests]
description = "Run Rasa story tests"
deps = [
    "rasa==3.6.21",
    "spacy==3.7.4",
    "https://github.com/explosion/spacy-models/releases/download/de_core_news_md-3.7.0/de_core_news_md-3.7.0.tar.gz"
]

commands = [
    ["rasa", "test", "core", "--fail-on-prediction-errors", "--stories", "tests/rasa/stories"]
]

[tool.tox.env.coverage]
description = "Run tests and generate HTML coverage report"
deps = [
    "-rrequirements.txt",
    "-e ."
]
commands = [
    ["python", "-m", "pytest", "tests/unit"]
]

[tool.tox.env.format]
description = "Run black formatter"
deps = ["black"]
commands = [
    ["black", "src/"],
    ["black", "tests/unit"],
    ["black", "integration_tests/"],
]

[project]
version = "0.1.0"
name = "bot_pilot"